[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
confik = "0.14.0"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
dotenvy = "0.15.7"
serde = "1.0.219"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"